--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^16.1.4",
     "mongoose": "^7.2.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.21.0",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main",
     "wwebjs-mongo": "^1.1.0"
   },
   "devDependencies": {
